--- a/FIAP/heiz/tasks/static/css/styles.css
+++ b/FIAP/heiz/tasks/static/css/styles.css
@@ -51,6 +51,7 @@
     position: absolute;
     top: 12px;
     right: 26px;
+    cursor: pointer;
 }
 
 .search-div {
@@ -111,4 +112,36 @@ footer p {
     text-align: center;
     top: 50%;
     position: relative;
+}
+
+/* messages */
+ul.messages {
+    padding: none;
+}
+
+ul.messages li {
+    list-style: none;
+}
+
+/* paginação */
+
+.pagination {
+    margin-bottom: 20px;
+}
+
+.step-links {
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.step-links .current {
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+/* login */
+
+.auth-card {
+    margin-bottom: 30px;
 }
