--- a/FIAP/heiz/tasks/templates/base.html
+++ b/FIAP/heiz/tasks/templates/base.html
@@ -36,12 +36,11 @@
         {% block content %}{% endblock %}
 
         <footer>
-            <p>Connstruindo...</p>
+            <p>Construindo!...</p>
         </footer>
 
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/538aca63fe.js" crossorigin="anonymous"></script>
+    
     <script src="{% static 'js/scripts.js' %}"></script>
 </body>
 </html>
