--- a/FIAP/heiz/tasks/templates/tasks/addtask.html
+++ b/FIAP/heiz/tasks/templates/tasks/addtask.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 
-{% block title %} Lista de Tarefas {% endblock %}
+
+{% block title %} Adicione uma tarefa {% endblock %}
 
 {% block content %}
 <div class="offset-1 col-10 list-div">
