--- a/FIAP/heiz/tasks/templates/tasks/list.html
+++ b/FIAP/heiz/tasks/templates/tasks/list.html
@@ -11,18 +11,45 @@
     </div>
     </a>
     <div class="col-9 search-div">
-        <input class="form-control" type="text" id="search" name="search" placeholder="Digite o nome da tarefa para buscar">
-        <i class="fas fa-search"></i>
+        <form method="GET" id="search-form">
+            <input class="form-control" type="text" id="search" name="search" placeholder="Digite o nome da tarefa para buscar">
+            <i class="fas fa-search" id="search-btn"></i>
+        </form>
+
     </div>
+    {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+                <li {% if message.tags %}class="alert alert-{{message.tags}}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+            </ul>
+    {% endif %}
     <ul class="task-list">
         {% for task in tasks %}
         <li class="task-item">
             <span><a href="/task/{{task.id}}">{{task.title}}</a></span>
-            <span><i class="fas fa-trash"></i></span>
-            <span><i class="fas fa-edit"></i></span>
+            <a href="delete/{{task.id}}" class="delete-btn"><span><i class="fas fa-trash"></i></span></a>
+            <a href="edit/{{task.id}}"><span><i class="fas fa-edit"></i></span></a>
         </li>
         {% endfor %}
     </ul>
+
+    <div class="pagination">
+        <span class="step-links">
+            {% if tasks.has_previous %}
+                <a href="?page={{ tasks.previous_page_number }}"><i class="fas fa-arrow-left"></i></a>
+            {% endif %}
+
+            <span class="current">
+                {{ tasks.number }} de {{ tasks.paginator.num_pages }}
+            </span>
+              
+            {% if tasks.has_next %}
+            <a href="?page={{ tasks.next_page_number }}"><i class="fas fa-arrow-right"></i></a>
+            {% endif %}
+
+        </span>
+    </div>
 </div>
 
 {% endblock %}
